--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ border: none;
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li class="text-lg raleway font-medium"><a>Home</a></li>
+            <li class="text-lg  font-medium"><a>Home</a></li>
             <li class="text-lg raleway font-medium"><a>About</a></li>
             <li class="text-lg raleway font-medium"><a>Destination</a></li>
             <li class="text-lg raleway font-medium"><a>Search</a></li>
@@ -160,7 +160,7 @@ border: none;
 <main>
 
   <!-- Offer section starts -->
-  <section class="space-y-20 max-w-[1300px] mx-5 lg:mx-auto  lg:px-8 px-4 pt-7">
+  <section class="space-y-20 max-w-[1300px] mx-5 lg:mx-auto  lg:px-8 px-3 pt-7">
     <h1 class="raleway font-bold text-4xl text-center">Best offers for you</h1>
 
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
