--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ border: none;
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li class="text-lg  font-medium"><a>Home</a></li>
+            <li class="text-lg raleway font-medium"><a>Home</a></li>
             <li class="text-lg raleway font-medium"><a>About</a></li>
             <li class="text-lg raleway font-medium"><a>Destination</a></li>
             <li class="text-lg raleway font-medium"><a>Search</a></li>
